Fixed grid gap issue

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@
       display: grid;
       grid-template-columns: repeat(6, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      grid-gap: 2%;
+      grid-gap: 10px;
       height: calc(100vh - 190px);
       align-items: start;
     }
